--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+---
+layout: default
+---
+<h1>Welcome to my website!</h1>
+
+<p>I am learning about the basics of HTML. This is a paragraph.</p>
+<p>Things that will help me build websites:</p>
+
+<div class="row">
+	<div class="col-md-4">
+		<h2>HTML</h2>
+		<p>Used for content and structure of web pages.</p>
+	</div>
+	<div class="col-md-4">
+		<h2>CSS</h2>
+		<p>Defines the design of website elements.</p>
+	</div>
+	<div class="col-md-4">
+		<h2>JavaScript</h2>
+		<p>Can add cool effects to otherwise boring pages.</p>
+	</div>
+</div>	
