--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 
 <p>I am learning about the basics of HTML. This is a paragraph.</p>
 <p>Things that will help me build websites:</p>
+<img src="/images/WC_logo.png"/>
 
 <div class="row">
 	<div class="col-md-4">
@@ -19,4 +20,4 @@ layout: default
 		<h2>JavaScript</h2>
 		<p>Can add cool effects to otherwise boring pages.</p>
 	</div>
-</div>	
+</div>
