Added content, styling fixes

--- a/index.html
+++ b/index.html
@@ -2,3 +2,106 @@
 layout: default
 title: WebcampLJ 2016
 ---
+
+<p>
+		WebCamp Ljubljana is the unconference where Web developers share knowledge, experience, and vim configurations.
+		<br><br>
+		It's organized <b>by the community for the community</b>. There will be over 300 attendees from Slovenia and the region. All talks will be in English.
+		<br><br>
+		Topics that will be covered are: <b>Front end</b>, <b>Back end</b> and <b>DevOps</b>.
+
+		There will be three tracks: <b>Front-end</b>, <b>Back-end</b> and <b>DevOps</b>.
+		And the fourth, most important one: <b>Good Time</b> with old and new friends,  good coffee and lots and lots of discussions with interesting people.
+		<br><br>
+		We want our events to be open and welcoming to everyone, so we ask you that you follow our <a href="http://2015.webcamp.si/code-of-conduct" target="_blank">Code of Conduct</a>.
+</p>
+
+<div class="section">
+  <div class='embed-container'>
+    <iframe src='https://www.youtube-nocookie.com/embed/ZlhGh-nx734?rel=0&amp;showinfo=0' frameborder='0' allowfullscreen></iframe>
+  </div>
+</div>
+
+<div id="cfp" class="section">
+  <h1>Call for Talks</h1>
+
+  <h2>Come give us a talk on:</h2>
+  <ul>
+    <li>Front-end (HTML5, CSS, JavaScript, ..)</li>
+    <li>Back-end (Frameworks, Languages, Middleware)</li>
+    <li>DevOps (Virtualization, Orchestration, Practical approaches)</li>
+    <li>or anything web developers care about</li>
+  </ul>
+
+  <h2>Talk format:</h2>
+
+  <ul>
+    <li>You have 25 minutes. Your talk should work offline. Screenshots are you best friends.</li>
+    <li>We want interesting stories. Everyone can read a tutorial.</li>
+    <li>We like videos more than demos. Come prepared.</li>
+    <li>You can suggest a 5 minute <i>lightning talk</i> at the venue.</li>
+  </ul>
+
+
+  <h2>Timeline:</h2>
+  <ul>
+    <li>Friday, February 13th - Submission deadline</li>
+    <li>Friday, February 20th - We notify The Chosen Ones</li>
+    <li>Monday, February 23rd - We tell everybody</li>
+  </ul>
+
+
+  <h2>
+    <a href='https://webcamp.typeform.com/to/ZMs0gp' class="btn btn-default" target="_blank">Submit your talk</a>
+  </h2>
+</div>
+
+<div id="2015" class="section">
+  <h1>Higlights from 2015</h1>
+
+  <div class='embed-container'>
+    <iframe src='https://www.flickr.com/photos/webcampsi/albums/72157650973111250/player' frameborder='0' allowfullscreen></iframe>
+  </div>
+
+  <h2>Check out talk videos</h2>
+
+  <p>
+    <a class="btn btn-default" href="http://video.webcamp.si/">WebCamp 2015 Videos</a>
+  </p>
+
+</div>
+
+<div id="partners" class="section">
+  <h1>Partners</h1>
+
+  <div class="row">
+    <div class="col-md-6">
+      <a href="http://2015.webcamp.si/assets/img/fri-logo-2.png"><img src="/assets/images/fri-logo-2.png" /></a>
+    </div>
+  </div>
+
+  <p>
+    This event would not be possible without the generous help of <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science</a>.
+    They also host a lot of other interesting events. Check out their <a href="http://www.fri.uni-lj.si/si/novice_in_dogodki/aktivne/">event list</a> and <a href="http://www.fri.uni-lj.si/si/izobrazevanje/">different post-graduate study programmes.</a>
+  </p>
+
+</div>
+
+<div id="contact" class="section">
+  <h1>Contact</h1>
+  <ul class="list-unstyled">
+    <p>
+      <a href="mailto:info@webcamp.si"><p>info@webcamp.si</p></a>
+    </p>
+    <p>
+      Phone: 041 893 765 (Jure Čuhalev)
+    </p>
+    <p>
+      <a href="https://twitter.com/webcampsi">
+        <img src="/assets/images/icons/twitter.svg" style="width:70px; height:70px;">
+      </a>
+  		<a href="https://www.facebook.com/webcamp.si">
+  			<img src="/assets/images/icons/facebook-square.svg" style="width:70px; height:70px;">
+  		</a>
+    </p>
+</div>
