Fixed typo in sponsors

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ title: WebcampLJ 2016
 
   <p>
     This event would not be possible without the generous help of <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science</a>.
-    They also host a lot of other interesting events. Check out their <a href="http://www.fri.uni-lj.si/si/novice_in_dogodki/aktivne/">event list</a> and <a href="http://www.fri.uni-lj.si/si/izobrazevanje/">different post-graduate study programmes.</a>
+    They also host a lot of other interesting events. Check out their <a href="http://www.fri.uni-lj.si/si/novice_in_dogodki/aktivne/">event list</a> and <a href="http://www.fri.uni-lj.si/si/izobrazevanje/">different post-graduate study programms.</a>
   </p>
 
 </div>
