Added code of conduct

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: WebcampLJ 2016
 		There will be three tracks: <b>Front-end</b>, <b>Back-end</b> and <b>DevOps</b>.
 		And the fourth, most important one: <b>Good Time</b> with old and new friends,  good coffee and lots and lots of discussions with interesting people.
 		<br><br>
-		We want our events to be open and welcoming to everyone, so we ask you that you follow our <a href="http://2015.webcamp.si/code-of-conduct" target="_blank">Code of Conduct</a>.
+		We want our events to be open and welcoming to everyone, so we ask you that you follow our <a href="{{ site.baseurl }}/code-of-conduct"  target="_blank">Code of Conduct</a>.
 </p>
 
 <div class="section">
