Minor content updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WebcampLJ 2016
+title: Webcamp Ljubljana 2016
 ---
 
 <p>
@@ -15,6 +15,18 @@ title: WebcampLJ 2016
 		<br><br>
 		We want our events to be open and welcoming to everyone, so we ask you that you follow our <a href="{{ site.baseurl }}/code-of-conduct"  target="_blank">Code of Conduct</a>.
 </p>
+
+<div id="location" class="section">
+	<h1>Location and Tickets</h1>
+
+	<p>
+		<b>When:</b> 12th March 2016<br />
+		<b>Where:</b> Faculty of Computer and Information Science, Ljubljana<br />
+		<b>Cost:</b> free, but you need a ticket<br />
+	</p>
+
+	<p>Tickets will be available in February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
+</div>
 
 <div class="section">
   <div class='embed-container'>
@@ -45,9 +57,9 @@ title: WebcampLJ 2016
 
   <h2>Timeline:</h2>
   <ul>
-    <li>Friday, February 13th - Submission deadline</li>
-    <li>Friday, February 20th - We notify The Chosen Ones</li>
-    <li>Monday, February 23rd - We tell everybody</li>
+    <li>Friday, January 15 - Submission deadline</li>
+    <li>Friday, February 1 - We'll notify The Chosen Ones</li>
+    <li>Monday, February 16th - We tell everybody</li>
   </ul>
 
 
@@ -89,7 +101,6 @@ title: WebcampLJ 2016
 
 <div id="contact" class="section">
   <h1>Contact</h1>
-  <ul class="list-unstyled">
     <p>
       <a href="mailto:info@webcamp.si"><p>info@webcamp.si</p></a>
     </p>
@@ -98,10 +109,11 @@ title: WebcampLJ 2016
     </p>
     <p>
       <a href="https://twitter.com/webcampsi">
-        <img src="/assets/images/icons/twitter.svg" style="width:70px; height:70px;">
+				<i class="fa fa-twitter fa-2x"></i>
       </a>
+			&nbsp;&nbsp;&nbsp;
   		<a href="https://www.facebook.com/webcamp.si">
-  			<img src="/assets/images/icons/facebook-square.svg" style="width:70px; height:70px;">
+				<i class="fa fa-facebook fa-2x"></i>
   		</a>
     </p>
 </div>
