--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@ title: Webcamp Ljubljana 2016
 
   <div class="row">
     <div class="col-md-6">
-      <a href="http://2015.webcamp.si/assets/img/fri-logo-2.png"><img src="/assets/images/fri-logo-2.png" /></a>
+      <a href="http://www.fri.uni-lj.si/en/"><img src="/assets/images/fri-logo-2.png" /></a>
+    </div>
+		<div class="col-md-6">
+      <a href="http://www.fri.uni-lj.si/en/lgm/description/"><img src="/assets/images/lgm-logo.png" /></a>
     </div>
   </div>
 
