Add sponsors to page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,54 @@ title: Webcamp Ljubljana 2016
 
 </div>
 
+<div id="sponsors" class="section">
+	<h1>Sponsors</h1>
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<a href="http://www.toptal.com"><img src="/assets/images/toptal.png" /></a>
+		</div>
+		<div class="col-md-12">
+			<p><a href="http://www.toptal.com">Toptal</a> is a community of the smartest freelance designers and software engineers in the world, all of whom must pass a rigorous screening process to be admitted, and its community operates from 93+ countries and hosts frequent meetups, tech talks, and conferences all across the world. With backing from Andreessen Horowitz, Adam D’Angelo of Quora, and others, Toptal connects thousands of elite freelance developers to over 2,000 clients including large enterprise companies such as J.P. Morgan and Pfizer, tech companies such as Airbnb and Zendesk, and numerous startups, providing world-class solutions that meet the most complex and challenging requirements.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<a href="http://www.celtra.com"><img src="/assets/images/celtra.png" /></a>
+		</div>
+		<div class="col-md-12">
+			<p><a href="http://celtra.com">Celtra</a> empowers agencies, media suppliers and brand
+			leaders alike with an integrated, truly scalable cross-screen HTML5
+			technology for brand and video advertising. The creative platform
+			for display and video brand advertising, improves the quality of
+			the message &amp; the way the message is presented to consumers.
+			AdCreator is built to run large-scale and complex campaigns. It is
+			a single platform for streamlined ad creation, performance
+			optimized serving and consolidated reporting with common metrics
+			across all screens.</p>
+
+			<p>Celtra is one of the fastest growing companies in mobile
+			advertising today. AdCreator, our award-winning platform for
+			creating, serving and analysing mobile ads is powering 5000+ brands
+			such as  Unilever, Coca Cola, AT&amp;T, Kraft, P&amp;G, Nike,
+			Intel and many others.</p>
+
+			<p>Our engineers spend their days building a product we all
+			love and share a passion for, making mobile browsers jump through
+			hoops, making big data look small and doing the humanity a favor by
+			making it incredibly easy to build ads people actually tap
+			on.</p>
+
+			<p>Our offices in Ljubljana, Boston, San Francisco, New York,
+			Los Angeles, Chicago, London and Sydney are always full of talent,
+			laughter, action, innovative ideas and snacks.</p>
+
+			<a href="https://twitter.com/@celtramobile">@celtramobile</a><br />
+			<a href="http://celtra.com/">celtra.com</a><br />
+			<a href="http://celtra.com/about/blog">celtra.com/about/blog</a><br />
+		</div>
+	</div>
+</div>
+
 <div id="partners" class="section">
   <h1>Partners</h1>
 
@@ -103,20 +151,46 @@ title: Webcamp Ljubljana 2016
 </div>
 
 <div id="contact" class="section">
-  <h1>Contact</h1>
-    <p>
-      <a href="mailto:info@webcamp.si"><p>info@webcamp.si</p></a>
-    </p>
-    <p>
-      Phone: 041 893 765 (Jure Čuhalev)
-    </p>
-    <p>
-      <a href="https://twitter.com/webcampsi">
-				<i class="fa fa-twitter fa-2x"></i>
-      </a>
-			&nbsp;&nbsp;&nbsp;
-  		<a href="https://www.facebook.com/webcamp.si">
-				<i class="fa fa-facebook fa-2x"></i>
-  		</a>
-    </p>
+	<div class="row">
+		<div class="col-md-12">
+		  <h1>Contact</h1>
+	    <p>
+	      <a href="mailto:info@webcamp.si"><p>info@webcamp.si</p></a>
+	    </p>
+	    <p>
+	      Phone: 041 893 765 (Jure Čuhalev)
+	    </p>
+	    <p>
+	      <a href="https://twitter.com/webcampsi">
+					<i class="fa fa-twitter fa-2x"></i>
+	      </a>
+				&nbsp;&nbsp;&nbsp;
+	  		<a href="https://www.facebook.com/webcamp.si">
+					<i class="fa fa-facebook fa-2x"></i>
+	  		</a>
+				<br /><br />
+	    </p>
+		</div>
+		<div class="col-md-6">
+			<h1>Team</h1>
+			<ul class="list-unstyled">
+				<li>Mojca Berce</li>
+				<li>Jure Čuhalev</li>
+				<li>Sabina Hosta</li>
+				<li>Klemen Robnik</li>
+				<li>Anamarija Sustič</li>
+			</ul>
+		</div>
+		<div class="col-md-6">
+			<h1>Talks committee</h1>
+			<ul class="list-unstyled">
+				<li>Swizec Teller</li>
+				<li>Erika Pogorelc</li>
+				<li>Brian King</li>
+				<li>Miha Rekar</li>
+			</ul>
+		</div>
+	</div>
 </div>
+
+<footer></footer>
