--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ title: Webcamp Ljubljana 2016
 	<h1>Sponsors</h1>
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<a href="http://www.toptal.com"><img src="/assets/images/toptal.png" /></a>
+			<a href="http://www.toptal.com" class="sponsor-logo"><img src="/assets/images/toptal.png" /></a>
 		</div>
 		<div class="col-md-12">
 			<p><a href="http://www.toptal.com">Toptal</a> is a community of the smartest freelance designers and software engineers in the world, all of whom must pass a rigorous screening process to be admitted, and its community operates from 93+ countries and hosts frequent meetups, tech talks, and conferences all across the world. With backing from Andreessen Horowitz, Adam D’Angelo of Quora, and others, Toptal connects thousands of elite freelance developers to over 2,000 clients including large enterprise companies such as J.P. Morgan and Pfizer, tech companies such as Airbnb and Zendesk, and numerous startups, providing world-class solutions that meet the most complex and challenging requirements.</p>
@@ -95,7 +95,7 @@ title: Webcamp Ljubljana 2016
 	</div>
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<a href="http://www.celtra.com"><img src="/assets/images/celtra.png" /></a>
+			<a href="http://www.celtra.com" class="sponsor-logo"><img src="/assets/images/celtra.png" /></a>
 		</div>
 		<div class="col-md-12">
 			<p><a href="http://celtra.com">Celtra</a> empowers agencies, media suppliers and brand
@@ -127,6 +127,15 @@ title: Webcamp Ljubljana 2016
 			<a href="https://twitter.com/@celtramobile">@celtramobile</a><br />
 			<a href="http://celtra.com/">celtra.com</a><br />
 			<a href="http://celtra.com/about/blog">celtra.com/about/blog</a><br />
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<a href="http://www.4thoffice.com/" class="sponsor-logo"><img src="/assets/images/4thoffice.png" /></a>
+		</div>
+		<div class="col-md-12">
+			<p>The relentless march of technology and its ever growing cacophony of messages and notifications are making collaboration harder than ever. Communicating has become a cause of stress rather than something we should all enjoy. <a href="http://www.4thoffice.com/">4th Office</a>, a Slovenian company based in London, UK is upgrading your email experience by adding an intelligent communications assistant, called Scarlett, to your email. She ensures you never miss follow ups or get distracted on the go.</p>
+			<p>The company is funded by Ben White and Notion Capital in the UK as well as RSG Capital in Slovenia to transform the way we organise and communicate online. Our offices in Technology Park, Ljubljana and Second Home, London are filled with young, international talent ambitiously building the ultimate lifehack."</p>
 		</div>
 	</div>
 </div>
