--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ title: Webcamp Ljubljana 2016
 		</div>
 		<div class="col-md-12">
 			<p>The relentless march of technology and its ever growing cacophony of messages and notifications are making collaboration harder than ever. Communicating has become a cause of stress rather than something we should all enjoy. <a href="http://www.4thoffice.com/">4th Office</a>, a Slovenian company based in London, UK is upgrading your email experience by adding an intelligent communications assistant, called Scarlett, to your email. She ensures you never miss follow ups or get distracted on the go.</p>
-			<p>The company is funded by Ben White and Notion Capital in the UK as well as RSG Capital in Slovenia to transform the way we organise and communicate online. Our offices in Technology Park, Ljubljana and Second Home, London are filled with young, international talent ambitiously building the ultimate lifehack."</p>
+			<p>The company is funded by Ben White and Notion Capital in the UK as well as RSG Capital in Slovenia to transform the way we organise and communicate online. Our offices in Technology Park, Ljubljana and Second Home, London are filled with young, international talent ambitiously building the ultimate lifehack.</p>
 		</div>
 	</div>
 </div>
