Edited CSS following gandalfar's comments

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ title: Webcamp Ljubljana 2016
 				<a class="col-xs-12 col-sm-6 col-md-4" href="{{ site.baseurl }}{{ post.url }}">
 					<div class="talk-info">
             <p class="talk-image">
-							<img src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}"></img>
+							<img src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}">
 						</p>
 						<p class="talker-name">
 							{{ post.name }}
