--- a/index.html
+++ b/index.html
@@ -71,39 +71,32 @@ title: Webcamp Ljubljana 2016
 -->
 <div id="talks" class="section">
   <h1>Talks</h1>
-	<div class="talkers">
-	{% assign posts = site.posts | sort:"name" %}
-	{% for post in posts %}
-		{% if post.role == 'talk' %}
-		<div class="talkers-one" class="row">
-					<span>
-						<a class="col-xs-12 col-sm-6 col-md-4" href="{{ site.baseurl }}{{ post.url }}">
-							<div class="talk-info">
-            		<p class="talk-image">
-									<img src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}" />
-								</p>
-								<p class="talker-name">
+	<div class="container-fluid">
+		<div class="row">
+			{% assign posts = site.posts | sort:"name" %}
+			{% for post in posts %}
+				{% if post.role == 'talk' %}
+					<div class="col-xs-12 col-sm-6 col-md-4">
+							<a href="{{ site.baseurl }}{{ post.url }}"><span class="talk-info">
+								<img class="talk-image" src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}" />
+								<span class="talker-name">
 									{{ post.name }}
-								</p>
-								<p class="talk-title">
+								</span>
+								<span class="talk-title">
 									{{ post.title }}
-								</p>
-								<p class="talk-role talk-bottom">
+								</span>
+								<span class="talk-role talk-bottom">
 						 			{{ post.track }}
-								</p>
-					<!--
-						<p class="talk-twitter"  class="talk-bottom">
-							<i class='fa fa-twitter fa-1x'>
-							</i>
-						</p> -->
-							</div>
+								</span>
+							</span>
 						</a>
-					<span>
-		</div>
-		{% endif %}
-	{% endfor %}
-	 <div class="clearfix"></div>
-	</div>
+					</div> <!-- end div col-xs-12 col-sm-6 col-md-4 col-lg-3 -->
+
+				{% endif %}
+			{% endfor %}
+	 		<div class="clearfix"></div>
+		</div> <!-- end div row -->
+	</div> <!-- end div container-fluid -->
 </div>
 
 <div id="2015" class="section">
