Changed span to div for talker-name and talk-title and added page of contact post

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@ title: Webcamp Ljubljana 2016
 					<div class="col-xs-12 col-sm-6 col-md-4">
 							<a href="{{ site.baseurl }}{{ post.url }}"><span class="talk-info">
 								<img class="talk-image" src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}" />
-								<span class="talker-name">
+								<div class="talker-name">
 									{{ post.name }}
-								</span>
-								<span class="talk-title">
+								</div>
+								<div class="talk-title">
 									{{ post.title }}
-								</span>
+								</div>
 								<span class="talk-role talk-bottom">
 						 			{{ post.track }}
 								</span>
