--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ title: Webcamp Ljubljana 2016
 	</p>
 
 	<p>Tickets will be available in February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
+	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
 </div>
 
 <div class="section">
@@ -169,6 +170,18 @@ title: Webcamp Ljubljana 2016
 			<p>The company is funded by Ben White and Notion Capital in the UK as well as RSG Capital in Slovenia to transform the way we organise and communicate online. Our offices in Technology Park, Ljubljana and Second Home, London are filled with young, international talent ambitiously building the ultimate lifehack.</p>
 		</div>
 	</div>
+
+	<div class="row sponsors-buna">
+
+		<div class="col-md-4">
+			<a href="http://www.buna.si/" class="sponsor-logo"><img src="/assets/images/buna.jpg" /></a>
+		</div>
+		<div class="col-md-8">
+			Ensuring freshness, price transparency, revealing the origin  of products and environmental responsibility are 4 key elements of the <a href="http://www.buna.si/">Buna concept</a>.
+			<br /><br />
+			Each Buna product is accompanied with information about its ORIGIN. Raw materials and products used in preparation of Buna come from the Fair Trade system or are made in accordance with its principles. We aim for the shortest possible trade chain between the grower, the producer and the consumer in order to guarantee FRESHNESS of our products.  By revealing the details of our price structure we ensure TRANSPARENCY to our customers. Buna users will be able to adjust their price by reusing the packaging of Buna, joining us and the people we work with in ENVIRONMENTAL RESPONSIBILITY.
+		</div>
+	</div>
 </div>
 
 <div id="partners" class="section">
@@ -178,12 +191,12 @@ title: Webcamp Ljubljana 2016
     <div class="col-md-6">
       <a href="http://www.fri.uni-lj.si/en/"><img src="/assets/images/fri-logo-2.png" /></a>
     </div>
-		<div class="col-md-6">
-      <a href="http://www.fri.uni-lj.si/en/lgm/description/"><img src="/assets/images/lgm-logo.png" /></a>
+		<div class="col-md-6 ">
+      <a href="http://www.fri.uni-lj.si/en/lgm/description/"><img class="lgm-logo" src="/assets/images/lgm-logo.png" /></a>
     </div>
   </div>
 
-  <p>
+  <p class="fri-tagline">
     This event would not be possible without the generous help of <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science</a>.
     They also host a lot of other interesting events. Check out their <a href="http://www.fri.uni-lj.si/si/novice_in_dogodki/aktivne/">event list</a> and <a href="http://www.fri.uni-lj.si/si/izobrazevanje/">different post-graduate study programms.</a>
   </p>
