--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Webcamp Ljubljana 2016
 		<b>Cost:</b> free, but you need a ticket<br />
 	</p>
 
-	<p>Tickets will be available in February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
+	<p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
 	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
 </div>
 
