Revert "Synching the last commit"
This reverts commit 9e427931f746ffd35aa192a7a1c5af210265b512.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ title: Webcamp Ljubljana 2016
 		<b>Cost:</b> free, but you need a ticket<br />
 	</p>
 
-	<p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
-	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
+	<p>Tickets will be available in February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
 </div>
 
 <div class="section">
@@ -119,7 +118,7 @@ title: Webcamp Ljubljana 2016
 	<h1>Sponsors</h1>
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<a href="http://www.toptal.com" class="sponsor-logo"><img src="/assets/images/toptal.png" /></a>
+			<a href="http://www.toptal.com"><img src="/assets/images/toptal.png" /></a>
 		</div>
 		<div class="col-md-12">
 			<p><a href="http://www.toptal.com">Toptal</a> is a community of the smartest freelance designers and software engineers in the world, all of whom must pass a rigorous screening process to be admitted, and its community operates from 93+ countries and hosts frequent meetups, tech talks, and conferences all across the world. With backing from Andreessen Horowitz, Adam D’Angelo of Quora, and others, Toptal connects thousands of elite freelance developers to over 2,000 clients including large enterprise companies such as J.P. Morgan and Pfizer, tech companies such as Airbnb and Zendesk, and numerous startups, providing world-class solutions that meet the most complex and challenging requirements.</p>
@@ -127,7 +126,7 @@ title: Webcamp Ljubljana 2016
 	</div>
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<a href="http://www.celtra.com" class="sponsor-logo"><img src="/assets/images/celtra.png" /></a>
+			<a href="http://www.celtra.com"><img src="/assets/images/celtra.png" /></a>
 		</div>
 		<div class="col-md-12">
 			<p><a href="http://celtra.com">Celtra</a> empowers agencies, media suppliers and brand
@@ -161,27 +160,6 @@ title: Webcamp Ljubljana 2016
 			<a href="http://celtra.com/about/blog">celtra.com/about/blog</a><br />
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-12 text-center">
-			<a href="http://www.4thoffice.com/" class="sponsor-logo"><img src="/assets/images/4thoffice.png" /></a>
-		</div>
-		<div class="col-md-12">
-			<p>The relentless march of technology and its ever growing cacophony of messages and notifications are making collaboration harder than ever. Communicating has become a cause of stress rather than something we should all enjoy. <a href="http://www.4thoffice.com/">4th Office</a>, a Slovenian company based in London, UK is upgrading your email experience by adding an intelligent communications assistant, called Scarlett, to your email. She ensures you never miss follow ups or get distracted on the go.</p>
-			<p>The company is funded by Ben White and Notion Capital in the UK as well as RSG Capital in Slovenia to transform the way we organise and communicate online. Our offices in Technology Park, Ljubljana and Second Home, London are filled with young, international talent ambitiously building the ultimate lifehack.</p>
-		</div>
-	</div>
-
-	<div class="row sponsors-buna">
-
-		<div class="col-md-4">
-			<a href="http://www.buna.si/" class="sponsor-logo"><img src="/assets/images/buna.jpg" /></a>
-		</div>
-		<div class="col-md-8">
-			Ensuring freshness, price transparency, revealing the origin  of products and environmental responsibility are 4 key elements of the <a href="http://www.buna.si/">Buna concept</a>.
-			<br /><br />
-			Each Buna product is accompanied with information about its ORIGIN. Raw materials and products used in preparation of Buna come from the Fair Trade system or are made in accordance with its principles. We aim for the shortest possible trade chain between the grower, the producer and the consumer in order to guarantee FRESHNESS of our products.  By revealing the details of our price structure we ensure TRANSPARENCY to our customers. Buna users will be able to adjust their price by reusing the packaging of Buna, joining us and the people we work with in ENVIRONMENTAL RESPONSIBILITY.
-		</div>
-	</div>
 </div>
 
 <div id="partners" class="section">
@@ -191,12 +169,12 @@ title: Webcamp Ljubljana 2016
     <div class="col-md-6">
       <a href="http://www.fri.uni-lj.si/en/"><img src="/assets/images/fri-logo-2.png" /></a>
     </div>
-		<div class="col-md-6 ">
-      <a href="http://www.fri.uni-lj.si/en/lgm/description/"><img class="lgm-logo" src="/assets/images/lgm-logo.png" /></a>
+		<div class="col-md-6">
+      <a href="http://www.fri.uni-lj.si/en/lgm/description/"><img src="/assets/images/lgm-logo.png" /></a>
     </div>
   </div>
 
-  <p class="fri-tagline">
+  <p>
     This event would not be possible without the generous help of <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science</a>.
     They also host a lot of other interesting events. Check out their <a href="http://www.fri.uni-lj.si/si/novice_in_dogodki/aktivne/">event list</a> and <a href="http://www.fri.uni-lj.si/si/izobrazevanje/">different post-graduate study programms.</a>
   </p>
