--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ title: Webcamp Ljubljana 2016
   <h1>Talks</h1>
 	<div class="container-fluid">
 		<div class="row">
-			{% assign posts = site.posts | sort:"name" %}
+			{% assign posts = site.posts | sort:"track" %}
 			{% for post in posts %}
 				{% if post.role == 'talk' %}
 					<div class="col-xs-12 col-sm-6 col-md-4">
