Added few more corrections Sabina found while testing

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ title: Webcamp Ljubljana 2016
 </div> <!-- end div schedule -->
 
 <div id="2015" class="section">
-  <h1>Higlights from 2015</h1>
+  <h1>Highlights from 2015</h1>
 
   <div class='embed-container'>
     <iframe src='https://www.flickr.com/photos/webcampsi/albums/72157650973111250/player' frameborder='0' allowfullscreen></iframe>
