Added two more sponsors

--- a/index.html
+++ b/index.html
@@ -207,8 +207,28 @@ title: Webcamp Ljubljana 2016
 		</div>
 	</div>
 
-	<div class="row sponsors-buna">
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<a href="https://reciprocitylabs.com/" class="sponsor-logo"><img src="/assets/images/reciprocity.png" /></a>
+		</div>
+		<div class="col-md-12">
+			<p><a href="https://reciprocitylabs.com/">Reciprocity's</a> SaaS product, ZenGRC, helps companies manage their ever growing compliance needs. The compliance market is 5 billion per year and growing fast. Our customers include Google, Uber, Airbnb, Apple, Salesforce, Square and more. We are competing against spreadsheets and old-school $1M and up enterprise solutions. Our team works and plays in San Francisco, Ljublijana, and Novi Sad.</p>
+		</div>
+	</div>
 
+	<div class="row sponsors-buna">
+		<div class="col-md-4">
+			<a href="https://kendu.si/" class="sponsor-logo"><img src="/assets/images/kendu.png" /></a>
+		</div>
+		<div class="col-md-8">
+			<p><a href="https://kendu.si/">Kendu</a> - delivering web and mobile applications with the right attitude.
+			<br /><br />
+			We strive to optimize performance, establish processes for quality assurance and determine what needs automation. From a rapid prototype development, system architecture and server infrastructure design, we develop solid code with a clear user interface, while scaling the team with specific business requirements.</p>
+		</div>
+	</div>
+
+
+	<div class="row sponsors-buna">
 		<div class="col-md-4">
 			<a href="http://www.buna.si/" class="sponsor-logo"><img src="/assets/images/buna.jpg" /></a>
 		</div>
