--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ title: Webcamp Ljubljana 2016
 			{% assign posts = site.posts | sort:"track" %}
 			{% for post in posts %}
 				{% if post.role == 'talk' %}
-					<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 							<a href="{{ site.baseurl }}{{ post.url }}"><span class="talk-info">
 								<img class="talk-image" src="{{ site.baseurl }}/assets/images/speakers/{{ post.avatar }}" />
 								<div class="talker-name">
