--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@ title: Webcamp Ljubljana 2016
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-md-12 text-center">
+			<a href="https://www.marand.com/" class="sponsor-logo"><img src="/assets/images/marand.png" /></a>
+		</div>
+		<div class="col-md-12">
+			<p>
+				Marand is a internationally recognized and awarded solution provider in healthcare offering products including Think!EHR Platform, Think!Meds and EhrScape.com. Our Think!EHR Platform™ is based on open standards and supports efficient recording, viewing and exchange of medical data. Think!EHR Platform™ was selected as one of the finalist for the best eHealth solution in EU »eHealth Competition«.
+			</p>
+			<p>
+				As our our sucesses and awards grow, so does the need to expand our development team. Do you develop in Java? Are you familiar with J2EE, SOA, MVC and most popular IDE environments? Send us your CV to <a href="mailto:zaposlitve@marand.si">zaposlitve@marand.si</a> and join our team. For other career opportunities, follow us on <a href="https://www.linkedin.com/company/marand">LinkedIn</a> or visit <a href="http://www.marand.com/en/about/careers/">Marand.com/en/about/careers/</a>.
+			</p>
+		</div>
+	</div>
+
 	<div class="row sponsors-buna">
 		<div class="col-md-4">
 			<a href="https://kendu.si/" class="sponsor-logo"><img src="/assets/images/kendu.png" /></a>
@@ -237,6 +251,17 @@ title: Webcamp Ljubljana 2016
 			Ensuring freshness, price transparency, revealing the origin  of products and environmental responsibility are 4 key elements of the <a href="http://www.buna.si/">Buna concept</a>.
 			<br /><br />
 			Each Buna product is accompanied with information about its ORIGIN. Raw materials and products used in preparation of Buna come from the Fair Trade system or are made in accordance with its principles. We aim for the shortest possible trade chain between the grower, the producer and the consumer in order to guarantee FRESHNESS of our products.  By revealing the details of our price structure we ensure TRANSPARENCY to our customers. Buna users will be able to adjust their price by reusing the packaging of Buna, joining us and the people we work with in ENVIRONMENTAL RESPONSIBILITY.
+		</div>
+	</div>
+
+	<div class="row sponsors-buna">
+		<div class="col-md-4">
+			<a href="http://www.pelicon.beer/" class="sponsor-logo"><img src="/assets/images/pelicon.png" /></a>
+		</div>
+		<div class="col-md-8">
+			<a href="http://www.pelicon.beer/">Pivovarna Pelicon</a> is an independent microbrewery located in the town of Ajdovscina in the heart of Vipava valley. Their craft beers are non filtered, non pasteurized and full of taste - just the way we like them.
+			<br /><br />
+			Pivovarna Pelicon focuses on the quality and creativity during the development of new beer recipes. They strive to continuously improve to get people excited about their the craft beer offering.
 		</div>
 	</div>
 </div>
