--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@ title: Webcamp Ljubljana 2016
 
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<a href="https://www.marand.com/" class="sponsor-logo"><img src="/assets/images/marand.png" /></a>
+			<a href="http://www.marand.com/" class="sponsor-logo"><img src="/assets/images/marand.png" /></a>
 		</div>
 		<div class="col-md-12">
 			<p>
-				Marand is a internationally recognized and awarded solution provider in healthcare offering products including Think!EHR Platform, Think!Meds and EhrScape.com. Our Think!EHR Platform™ is based on open standards and supports efficient recording, viewing and exchange of medical data. Think!EHR Platform™ was selected as one of the finalist for the best eHealth solution in EU »eHealth Competition«.
+				<a href="http://www.marand.com">Marand</a> is a internationally recognized and awarded solution provider in healthcare offering products including Think!EHR Platform, Think!Meds and EhrScape.com. Our Think!EHR Platform™ is based on open standards and supports efficient recording, viewing and exchange of medical data. Think!EHR Platform™ was selected as one of the finalist for the best eHealth solution in EU »eHealth Competition«.
 			</p>
 			<p>
 				As our our sucesses and awards grow, so does the need to expand our development team. Do you develop in Java? Are you familiar with J2EE, SOA, MVC and most popular IDE environments? Send us your CV to <a href="mailto:zaposlitve@marand.si">zaposlitve@marand.si</a> and join our team. For other career opportunities, follow us on <a href="https://www.linkedin.com/company/marand">LinkedIn</a> or visit <a href="http://www.marand.com/en/about/careers/">Marand.com/en/about/careers/</a>.
