Add note about students

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ title: Webcamp Ljubljana 2016
 
 	<p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
 	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
-</div>
+
+	<p>If you are a current student of Faculty of Computer and Information Science, you can get a ticket by emailing us at info@webcamp.si.</div>
 
 <!--
 <div id="iot" class="section">
