--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">9:30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Anze Žnidaršič</strong> / Using JavaScript ES2015 (ES6), ES2016, ES* in production</p>
+				<a href="/Anze-Znidarsic"><p class="schedule-red-on-red"><strong>Anze Žnidaršič</strong> / Using JavaScript ES2015 (ES6), ES2016, ES* in production</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -130,7 +130,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Ivan Lučin</strong> / Cheating on Rails with Ember</p>
+				<a href="/Ivan-Lucin"><p class="schedule-red-on-red"><strong>Ivan Lučin</strong> / Cheating on Rails with Ember</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -138,7 +138,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Slobodan Stojanović</strong> / Offline web apps</p>
+				<a href="/Slobodan-Stojanovic"><p class="schedule-red-on-red"><strong>Slobodan Stojanović</strong> / Offline web apps</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -151,7 +151,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">9:30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Bozhidar Batsov</strong> / The Burden of Project Stewardship</p>
+				<a href="/Bozhidar-Batsov"><p class="schedule-red-on-red"><strong>Bozhidar Batsov</strong> / The Burden of Project Stewardship</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -159,7 +159,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Josip Maslać</strong> / Scaling just a bit</p>
+				<a href="/Josip-Maslac"><p class="schedule-red-on-red"><strong>Josip Maslać</strong> / Scaling just a bit</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -167,7 +167,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Luka Muzinic</strong> / Dashboards for devops and other web folks</p>
+				<a href="/Luka-Muzinic"><p class="schedule-red-on-red"><strong>Luka Muzinic</strong> / Dashboards for devops and other web folks</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -180,7 +180,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">9:30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Srdjan Vranac</strong> / Roll out - Code deployments that do not suck</p>
+				<a href="/Srdjan-Vranac"><p class="schedule-red-on-red"><strong>Srdjan Vranac</strong> / Roll out - Code deployments that do not suck</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -188,7 +188,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Aleksandar Stevanovic</strong> / Change is hard - make your life easy by making code simple</p>
+				<a href="/Aleksandar-Stevanovic"><p class="schedule-red-on-red"><strong>Aleksandar Stevanovic</strong> / Change is hard - make your life easy by making code simple</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -196,7 +196,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Nebojsa Stricevic</strong> / Supercharged Feature Flags</p>
+				<a href="/Nebojsa-Stricevic"><p class="schedule-red-on-red"><strong>Nebojsa Stricevic</strong> / Supercharged Feature Flags</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -235,7 +235,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">11.30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Mark Nadal</strong> / The Front-end Back-end without DevOps</p>
+				<a href="/Mark-Nadal"><p class="schedule-red-on-red"><strong>Mark Nadal</strong> / The Front-end Back-end without DevOps</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -243,7 +243,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Andrei Zvonimir Crnković</strong> / Go reactive or go home</p>
+				<a href="/Andrei-Zvonimir-Crnkovic"><p class="schedule-red-on-red"><strong>Andrei Zvonimir Crnković</strong> / Go reactive or go home</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -251,7 +251,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Andraz Bajt</strong> / Purely functional frontend</p>
+				<a href="/Andraz-Bajt"><p class="schedule-red-on-red"><strong>Andraz Bajt</strong> / Purely functional frontend</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -264,7 +264,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">11.30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Luka Kladaric</strong> / The importance of being a noob</p>
+				<a href="/Luka-Kladaric"><p class="schedule-red-on-red"><strong>Luka Kladaric</strong> / The importance of being a noob</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -272,7 +272,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Rok Carl</strong> / Becoming DevOps, a developer's tale</p>
+				<a href="/Rok-Carl"><p class="schedule-red-on-red"><strong>Rok Carl</strong> / Becoming DevOps, a developer's tale</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -280,7 +280,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Primoz Cigler</strong> / Beauties and challenges of remote work</p>
+				<a href="/Primoz-Cigler"><p class="schedule-red-on-red"><strong>Primoz Cigler</strong> / Beauties and challenges of remote work</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -293,7 +293,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">11.30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Simon Belak</strong> / The Log, the View and the Stream</p>
+				<a href="/Simon-Belak"><p class="schedule-red-on-red"><strong>Simon Belak</strong> / The Log, the View and the Stream</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -301,7 +301,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong> Robert Šorn</strong> / Domain Driven Design in a nutshell</p>
+				<a href="/Robert-Sorn"><p class="schedule-red-on-red"><strong> Robert Šorn</strong> / Domain Driven Design in a nutshell</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -309,7 +309,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<p class="schedule-red-on-red"><strong>Marko Kazic</strong> / Where we fail at teaching programming</p>
+				<a href="/Marko-Kazic"><p class="schedule-red-on-red"><strong>Marko Kazic</strong> / Where we fail at teaching programming</p></a>
 			</div>
 		</div>
 		<div class="row">
