--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ title: Webcamp Ljubljana 2016
 	<div class="container-fluid">
 		<div class="row">
   		<div class="col-xs-6 col-sm-2">
-    		<p class="schedule-grey">8:50</p>
+    		<p class="schedule-grey">8:00</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
     		<p class="schedule-red"><strong>Registration opens</strong> / Everyone with a ticket, welcome!</p>
@@ -196,7 +196,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">10:30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Nebojsa-Stricevic"><p class="schedule-red-on-red"><strong>Nebojsa Stricevic</strong> / Supercharged Feature Flags</p></a>
+				<a href="/Primoz-Cigler"><p class="schedule-red-on-red"><strong>Primoz Cigler</strong> / Beauties and challenges of remote work</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -264,7 +264,7 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">11.30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Luka-Kladaric"><p class="schedule-red-on-red"><strong>Luka Kladaric</strong> / The importance of being a noob</p></a>
+				<a href="/Rok-Carl"><p class="schedule-red-on-red"><strong>Rok Carl</strong> / Becoming DevOps, a developer's tale</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -272,7 +272,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Rok-Carl"><p class="schedule-red-on-red"><strong>Rok Carl</strong> / Becoming DevOps, a developer's tale</p></a>
+				<a href="/Marko-Kazic"><p class="schedule-red-on-red"><strong>Marko Kazic</strong> / Where we fail at teaching programming</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -280,7 +280,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Primoz-Cigler"><p class="schedule-red-on-red"><strong>Primoz Cigler</strong> / Beauties and challenges of remote work</p></a>
+				<a href="/Luka-Kladaric"><p class="schedule-red-on-red"><strong>Luka Kladaric</strong> / The importance of being a noob</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -293,7 +293,8 @@ title: Webcamp Ljubljana 2016
     		<p class="schedule-grey">11.30</p>
   		</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Simon-Belak"><p class="schedule-red-on-red"><strong>Simon Belak</strong> / The Log, the View and the Stream</p></a>
+				<a href="/Nebojsa-Stricevic"><p class="schedule-red-on-red"><strong>Nebojsa Stricevic</strong> / Supercharged Feature Flags</p></a>
+
 			</div>
 		</div>
 		<div class="row">
@@ -309,7 +310,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">12.30</p>
 			</div>
 			<div class="col-xs-12 col-sm-10">
-				<a href="/Marko-Kazic"><p class="schedule-red-on-red"><strong>Marko Kazic</strong> / Where we fail at teaching programming</p></a>
+				<a href="/Simon-Belak"><p class="schedule-red-on-red"><strong>Simon Belak</strong> / The Log, the View and the Stream</p></a>
 			</div>
 		</div>
 		<div class="row">
@@ -349,7 +350,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">18.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10 ">
-				<p class="schedule-red"><strong>Party!</strong></p>
+				<p class="schedule-red"><strong>Party at <a href="http://www.stapotovanja.com/sta/sta-travel-cafe">STA Travel Cafe!</a></strong></p>
 			</div>
 		</div>
 	</div><!-- end div container-fluid -->
